--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,8 +12,32 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
-}
 
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
+ 
+}
+.left
+{
+  display: flex;
+  gap: 16px;
+ align-items: center;
+  
+}
+.right{
+  display: flex;
+  gap: 16px;
+ align-self: center;
+}
+.links{
+  display: flex;
+  gap: 16px;
+  flex-shrink: 0;
+  
+  
+}
 .profile-image {
   background: rebeccapurple;
   box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
@@ -45,4 +69,9 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
+
 }
