--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,7 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+  
 }
 
 img {
@@ -10,6 +12,16 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
+}
+.items{
+  display: flex;
+  justify-content: space-between;
+  gap: 52px;
+  
+}
+.items div{
+  max-width: 200px;
 }
 
 /* do not edit this footer */
