--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -6,7 +6,6 @@ body {
   overflow: hidden;
   font-family: Roboto, sans-serif;
 }
-
 img {
   width: 600px;
 }
@@ -24,3 +23,44 @@ input {
   padding: 8px 24px;
   width: 400px;
 }
+
+
+
+body{
+  display: flex;
+  flex-direction: column;
+
+}
+.header, .footer{
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+
+ul{
+  display: flex;
+  gap:20px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.content{
+  flex-grow: 1;
+  display: flex;
+  flex-direction:column ;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+
+}
+.footer{
+  background-color:#eeeeee;}
+button {
+    padding: 8px 16px;
+  } 
+a {
+    color: #666;
+    text-decoration: none;
+  }  
