--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -1,27 +1,39 @@
 body {
-  background: #eee;
+  background: #e42a2a;
   font-family: sans-serif;
 }
 
 .card {
   width: 400px;
-  background: #fff;
+  background: rgb(255, 255, 255);
   margin: 16px auto;
+  padding: 10px;
+  
 }
-
 .title {
   background: #e3f4ff;
+  margin-bottom: 8px;
+  font-size: 16px;
+  
 }
 
 .content {
   background: #e3f4ff;
+  margin: 16px auto;
+  padding: 20px;
+  
 }
 
+
 .button-container {
+  text-align: center;
   background: #e3f4ff;
 }
 
 button {
+  margin: 0 auto;
+  display:block;
   background: white;
-  border: 1px solid #eee;
+  
+  padding: 10px;
 }
